# piet-wgpu

./: Cargo.toml
examples/: minimal.rs
piet-wgpu/: Cargo.toml
piet-wgpu-samples/: Cargo.toml
piet-wgpu-samples/examples/: image.rs  minimal.rs
piet-wgpu-samples/src/: lib.rs
piet-wgpu/shaders/: simple.wgsl
piet-wgpu/src/: buffer_layout.rs  config.rs  data.rs  error.rs  image.rs  immediate.rs  lib.rs  renderer.rs  text.rs  texture.rs
shaders/: geometry.vs.wgsl  simple.wgsl
src/: cache.rs  context.rs  data.rs  font.rs  immediate.rs  lib.rs  pipeline.rs  renderer.rs  svg.rs  text.rs  transformation.rs
src/shader/: geometry copy.wgsl  geometry.wgsl  quad.wgsl  text.wgsl
tests/: test.rs
