[package]
name = "piet-wgpu"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.14"
lyon = "1.0"
piet = "0.5.0"
wgpu = { version = "0.14", features = ["spirv"] }
futures = "0.3.17"
raw-window-handle = "0.5"
bytemuck = { version = "1.7.2", features = ["derive"] }
static_assertions = "1.1"
thiserror = "1.0"
kurbo = "0.8"
image = { version = "*", default-features = false, features = ["jpeg", "png"] }
